--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,12 @@
   "description": "## Authenticate Me - Backend In this multi-part project, you will learn how to put together an entire Express + React application with authentication.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "sequelize": "sequelize",
+    "sequelize-cli": "sequelize-cli",
+    "start": "per-env",
+    "start:development": "nodemon -r dotenv/config ./bin/www",
+    "start:production": "node ./bin/www"
   },
   "keywords": [],
   "author": "",
