--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,7 +1,7 @@
 PORT=5000
-DB_USERNAME=auth_app
+DB_USERNAME=boba_fetch_app
 DB_PASSWORD=«auth_app user password»
-DB_DATABASE=auth_db
+DB_DATABASE=boba_fetch_db
 DB_HOST=localhost
 JWT_SECRET=«generate_strong_secret_here»
 JWT_EXPIRES_IN=604800
